# JapariPark

./: .dockerignore  .gitignore  Development History.txt  Devlogs.txt  IDEAS.txt  Pipfile  README.md  TODO.txt  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
.github/workflows/: base_master_tests.yml  blank.yml  development_branch_tests.yml  test_development_branch.yml  test_master_branch.yml
Backend/JapariService/: .dockerignore  Dockerfile  Pipfile  T O D O  docker-compose.yaml  docker_raw_start.txt  docker_run.old  docker_run.txt  manage.py  migrate.py  pytest.ini  requirements.txt
Database/JapariDB/: .dockerignore  Dockerfile  docker-compose.yaml  docker_run.old  docker_run.txt  requirements.txt
FriendsFrontend/: .dockerignore  Dockerfile  Pipfile  docker_raw_start.txt  manage.py  requirements.txt
FriendsFrontend/friends/: __init__.py  application.py  config.py  constants.py  main.py  routes.py  wsgi.py
FriendsFrontend/helpers/: __init__.py  base_dir.py  command_args.py  context.py  parse_argv.py
FriendsFrontend/tests/: __init__.py  context.py  testRunner.py  test_basic.py
Frontend/: Pipfile  __init__.py  main.py  manage.py
Frontend/FriendsWeb/: .dockerignore  Dockerfile  Dockerfile_Github  Pipfile  TODO  base_dir.py  config.py  docker-compose.yaml  docker_app_run.old  docker_app_run.txt  docker_nginx_run.old  docker_nginx_run.txt  docker_raw_start.txt  (+3 more)
GlobalTests/: __init__.py  context.py  test_basic.py  test_project_base.py
project_tests/: __init__.py  test_basic.py
tests/: context.py  test_basic.py
(+197 files in other folders)
