[project]
name = "JapariPark"
version = "dev"
authors = [
  { name="Kita Voronok", email="kitavoronok@gmail.com" },
]
description = "Friends social network."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Framework :: AsyncIO",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Programming Language :: Python :: 3",
    "License :: TODO",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Linux :: Ubuntu 20.04",
    "Programming Language :: Python",
    "Topic :: Education",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
]
keywords = ["social network"]

[project.urls]
Homepage = "https://github.com/voronokKita/JapariPark"
Documentation = "TODO"

dependencies = [
  "pytest",
]
